resolve maintainability issues